# pedigree-generator

./: .gitignore  README.md  pedigree-generator.ipynb  pedigree_generator.py  pyproject.toml  requirements.txt  streamlit_app.py
src/PedGen/: __init__.py  core.py
