[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "PedGen"
dynamic = ["version"]
authors = [
    { name="Nick Taylor", email="taylorngt@cox.net" },
]
description = "Realistic synthetic pedigree generation, visualization, and file export."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pandas>=1.3.0,<3.0.0",
    "matplotlib>=3.5.0",
    "networkx>=3.0",
    "pygraphviz>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/PedGen"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/PedGen/_version.py"

[project.urls]
Homepage = "https://github.com/taylorngt/pedigree-generator"
Issues = "https://github.com/taylorngt/pedigree-generator/issues"